kubernetes/apps/selfhosted/harbor/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  # annotations:
  #   external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
  #   external-dns.alpha.kubernetes.io/target: ipv4.monosense.dev
spec:
  parentRefs:
    - name: envoy-internal
      kind: Gateway
      namespace: networking
      sectionName: https
  hostnames:
    - hcr.monosense.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/
      - path:
          type: PathPrefix
          value: /service/
      - path:
          type: PathPrefix
          value: /v2/
      - path:
          type: PathPrefix
          value: /c/
      backendRefs:
        - name: harbor-core
          namespace: selfhosted
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: harbor-portal
          namespace: selfhosted
          port: 80
